# compress-video-update

./: .gitignore  .gitmodules  README.md  compress-video-update.cabal  compress-videos-update.cabal  stack.yaml
app/: Main.hs
src/VC/: Update.hs
src/VC/Update/: App.hs  Class.hs  Prelude.hs  Types.hs
test/: Spec.hs  env.cfg
test/Test/: App.hs  Env.hs  Preset.hs
