name:                compress-video-update
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/compress-video-update#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     VC.Update
                     , VC.Update.App
                     , VC.Update.Class
                     , VC.Update.Prelude
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       http-conduit
                     , mtl
                     , text
                     , bytestring
                     , easy-file
                     , directory
                     , containers
                     , aeson
                     , zip-archive
                     , extra
                     , data-to-json-file
                     , options
                     , extra
                     , process
                     , unix

executable compress-video-update-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , compress-video-update
                     , data-to-json-file
                     , options
                     , process
                     , unix
                     , extra
  default-language:    Haskell2010

test-suite compress-video-update-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Test.App
                       Test.Env
                       Test.Preset
  build-depends:       base
                     , compress-video-update
                     , hspec
                     , easy-file
                     , directory
                     , mtl
                     , options
                     , process
                     , unix
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/compress-video-update
